Fix issue with wrong z-index

--- a/curso-html-css-js/proj-02/css/style.css
+++ b/curso-html-css-js/proj-02/css/style.css
@@ -58,7 +58,7 @@ h3 {
   border-bottom: solid 2px var(--light-gray-transparent);
 }
 
-.top-nav a.disabled {
+.top-nav a[href].disabled {
   color: var(--light-gray-transparent);
 }
 
@@ -83,7 +83,7 @@ h3 {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
-  z-index: 2;
+  z-index: 1;
   box-shadow: var(--sombra);
   width: 100%;
 }
@@ -154,8 +154,6 @@ main {
   color: var(--light-gray);
   border-top: solid 1px var(--light-gray-transparent);
   max-height: fit-content;
-  z-index: -1;
-  top: auto;
 }
 
 .hero-title {
